--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@types/node": "^18.7.18"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1"
   }
 }
