--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "@types/sequelize": "^4.28.14",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.1"
   }
 }
