--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.18",
     "@types/sequelize": "^4.28.14",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "http-status": "^1.5.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.1"
   }
